force-app/main/default/objects/QueueVsAgency__c/QueueVsAgency__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores mapping of all queue name v/s agency. division, branch</description>
    <label>QueueVsAgency</label>
</CustomObject>