force-app/main/default/objects/QueueVsAgency__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>