force-app/main/default/objects/QueueVsAgency__c/fields/ManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>ManagerEmail__c</fullName>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>