force-app/main/default/objects/QueueVsAgency__c/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <label>Queue Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>