force-app/main/default/objects/QueueVsAgency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QueueName__c</columns>
    <columns>ManagerEmail__c</columns>
    <columns>Agency__c</columns>
    <columns>Branch__c</columns>
    <columns>Division__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>